fixed containter that was causing overflow

--- a/src/styles/ContactPage.scss
+++ b/src/styles/ContactPage.scss
@@ -4,7 +4,6 @@
     width: 100%;
     height: auto;
     // border: 2px solid gray;
-    margin: 3.5%;
 }
 
 
