--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,11 +5,5 @@ body {
       scroll-behavior: smooth;
       overflow-x: hidden;
 
-      @media screen and (max-width: 500px) {
-        overflow-x: hidden;
-      }
-      @media screen and (max-width: 800px) {
-        overflow-x: hidden;
-     }
   }
   
